--- a/L10n/ru.strings
+++ b/L10n/ru.strings
@@ -19,6 +19,7 @@
 "SortingMode.ALPHABET" = "Алфавит";
 "ViewMode.FULL" = "Показывать все товары";
 "ViewMode.FILTERED" = "Продаются на станции";
+"ViewMode.LACKS" = "Нужно докупить";
 "ViewMode.NONE" = "Спрятать таблицу товаров";
 "Remaining {0:.1f} flights at {1} tons each, total {2} t" = "Осталось {0:.1f} ходок по {1} тонн, всего {2} тонн";
 
