--- a/L10n/ru.strings
+++ b/L10n/ru.strings
@@ -5,16 +5,23 @@
 "Station" = "Станция";
 "Track this construction" = "Отслеживать строительство";
 "This construction is not tracked" = "Эта стройка не отслеживается";
+"Dock to construction site to start tracking progress = "Причальте к площадке, для отслеживания стройки"
 "{} (docked)" = "{} (пристыкован)";
 "{} (not tracked)" = "{} (не отслеживается)";
 "Commodity" = "Материалы";
 "Need" = "Нужно";
+"Demand" = "Нужно";
 "Cargo" = "Судно";
 "Carrier" = "Авиан.";
 "Buy" = "Купить";
 "SortingMode.MARKET" = "Станция";
 "SortingMode.CARRIER" = "Авианосец";
 "SortingMode.ALPHABET" = "Алфавит";
+"ViewMode.FULL" = "Показывать все товары";
+"ViewMode.FILTERED" = "Продаются на станции";
+"ViewMode.LACKS" = "Нужно докупить";
+"ViewMode.NONE" = "Спрятать таблицу товаров";
+"Remaining {0:.1f} flights at {1} tons each, total {2} t" = "Осталось {0:.1f} ходок по {1} тонн, всего {2} тонн";
 
 /* Construction sites replacement */
 "$EXT_PANEL_ColonisationShip" = "Колонизационный корабль";
