--- a/L10n/sorting-ru.csv
+++ b/L10n/sorting-ru.csv
@@ -1,13 +1,13 @@
 symbol,name,market,carrier
 *, Chemicals,                                               1500,
 Explosives,                Взрывчатка,                      1502,   17
-LiquidOxygen,              Жидкий кислород,                 1505,   49
+LiquidOxygen,              Жидкий кислород,                 1505,   50
 Pesticides,                Пестициды,                       1511,   70
 SurfaceStabilisers,        Стабилизаторы поверхности,       1514,   18
 Water,                     Вода,                            1503,    7
 *, Consumer Items,                                           800,
 EvacuationShelter,         Эвакуационное убежище,            830,   20
-SurvivalEquipment,         Снаряжение для выживания,         825,   52
+SurvivalEquipment,         Снаряжение для выживания,         825,   53
 *, Foods,                                                    900,
 Animalmeat,                Мясо животных,                    926,   22
 Coffee,                    Кофе,                             912,   74
@@ -15,12 +15,12 @@ Fish,                      Рыба,                             938,   28
 FoodCartridges,            Пищевые брикеты,                  934,   15
 FruitAndVegetables,        Фрукты и овощи,                   945,   44
 Grain,                     Зерно,                            911,    4
-SyntheticMeat,             Синтетическое мясо,               940,   50
+SyntheticMeat,             Синтетическое мясо,               940,   51
 Tea,                       Чай,                              948,    2
 *, Industrial Materials,                                    1000,
 CeramicComposites,         Керамокомпозиты,                 1004,    6
 CMMComposite,              CMM-композит,                    1001,    8
-InsulatingMembrane,        Изолирующая мембрана,            1003,   51
+InsulatingMembrane,        Изолирующая мембрана,            1003,   52
 Polymers,                  Полимеры,                        1006,   14
 Semiconductors,            Полупроводники,                  1007,   16
 Superconductors,           Сверхпроводники,                 1008,   13
@@ -32,16 +32,16 @@ Wine,                      Вино,                             103,   29
 BuildingFabricators,       Строительные синтезаторы,         320,   72
 CropHarvesters,            Уборочный комбайн,                322,   19
 EmergencyPowerCells,       Аварийные энергоячейки,           301,   23
-GeologicalEquipment,       Геологическое оборудование,       305,   56
+GeologicalEquipment,       Геологическое оборудование,       305,   57
 HeliostaticFurnaces,       Микробные печи,                   311,   21
 MineralExtractors,         Экстракторы минералов,            325,   10
-PowerGenerators,           Электрогенераторы,                326,   53
+PowerGenerators,           Электрогенераторы,                326,   54
 ThermalCoolingUnits,       Термальные охладители,            321,   40
 WaterPurifiers,            Водоочистители,                   303,   26
 *, Medicines,                                                200,
-CombatStabilisers,         Боевые стабилизаторы,             203,   59
-AgriculturalMedicines,     Ветмедикаменты,                   204,   58
-BasicMedicines,            Основные лекарства,               210,   59
+CombatStabilisers,         Боевые стабилизаторы,             203,   60
+AgriculturalMedicines,     Ветмедикаменты,                   204,   59
+BasicMedicines,            Основные лекарства,               210,   61
 *, Metals,                                                   400,
 Aluminium,                 Алюминий,                         401,   73
 Copper,                    Медь,                             413,   75
@@ -52,9 +52,9 @@ Titanium,                  Титан,                            425,   12
 *, Slavery,                                                 1100,
 *, Technology,                                              1400,
 AdvancedCatalysers,        Улучшенные катализаторы,         1420,   71
-AutoFabricators,           Автосинтезаторы,                 1401,   48
+AutoFabricators,           Автосинтезаторы,                 1401,   49
 BioReducingLichen,         Лишайник-биоредуктор,            1410,    9
-ComputerComponents,        Компьютерные компоненты,         1408,   54
+ComputerComponents,        Компьютерные компоненты,         1408,   55
 HazardousEnvironmentSuits, Защитные костюмы,                1407,   24
 TerrainEnrichmentSystems,  Системы обогащения почвы,        1418,   25
 MedicalDiagnosticEquipment,Диагностическое медоборудование, 1404,    3
@@ -65,10 +65,11 @@ Robotics,                  Роботы,                          1416,   76
 StructuralRegulators,      Конструкционные регуляторы,      1409,   45
 *, Textiles,                                                1300,
 MilitaryGradeFabrics,      Ткани военного класса,           1312,   77
-NaturalFabrics,            Натуральная ткань,               1307,   57
-SyntheticFabrics,          Синтетическая ткань,             1310,   55
+NaturalFabrics,            Натуральная ткань,               1307,   58
+SyntheticFabrics,          Синтетическая ткань,             1310,   56
 *, Waste,                                                    700,
 Biowaste,                  Биоотходы,                        701,   43
 *, Weapons,                                                  600,
 NonLethalWeapons,          Нелетальное оружие,               607,   46
 ReactiveArmour,            Реактивная защита,                608,   47
+BattleWeapons,             Военное оружие,                   602,   48
