Click to edit demand and carrier cargo. Check carrier belongs to cmdr.

--- a/L10n/en.strings
+++ b/L10n/en.strings
@@ -12,6 +12,10 @@
 "SortingMode.MARKET" = "Market";
 "SortingMode.CARRIER" = "Carrier";
 "SortingMode.ALPHABET" = "Alphabet";
+"ViewMode.FULL" = "Full";
+"ViewMode.FILTERED" = "Filtered";
+"ViewMode.LACKS" = "Lacks";
+"ViewMode.NONE" = "Hide";
 
 /* Construction sites replacement */
 "$EXT_PANEL_ColonisationShip" = "Colonization Ship";
